@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="service.L0RE.cron" name="Crontab für andere Addons" version="1.0.2" provider-name="L0RE">
+<addon id="service.L0RE.cron" name="Crontab für andere Addons" version="1.0.3" provider-name="L0RE">
 	<requires>
-		<import addon="xbmc.python" version="2.24.0"/>
+		<import addon="xbmc.python" version="2.25.0"/>
+		<import addon="service.cron.autobiblio" version="2.0.4"/>
 	</requires>
 	<extension point="xbmc.service" library="service.py" start="login"/>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -10,8 +11,8 @@
 	<extension point="xbmc.addon.metadata">
 		<summary lang="de_DE">Crontab - Aktionssteuerung</summary>
 		<summary lang="en_GB">Crontab - Action control</summary>
-		<description lang="de_DE">Ein Service um regelmäßig (Stunden/Tage) gespeicherte Aktionen (z.B. Aktualisierung der Addon-Medienbibliothek) in anderen Plugins aufzurufen.</description>
-		<description lang="en_GB">A service to call regular (hours/days) stored actions (e.g. update the addon media library) in other plugins.</description>
+		<description lang="de_DE">[COLOR red]- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 2.0.4 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 1.0.3 DEINSTALLIEREN.[/COLOR]</description>
+		<description lang="en_GB">[COLOR red]- This Addon gets a new path in the KODI directory ![CR]- This restores the compatibility and the call by other addons.[CR][CR]- Please ACTIVATE the new Addon with the Version-No. 2.0.4.[CR]- After that UNINSTALL this Addon with the Version-No. 1.0.3.[/COLOR]</description>
 		<disclaimer lang="de_DE">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
 		<disclaimer lang="en_GB">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
 		<language></language>
@@ -23,10 +24,12 @@
 		<source>https://github.com/kodinerds/repo/tree/master/service.L0RE.cron</source>
 		<assets>
 			<icon>icon.png</icon>
-			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.2  (20.10.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Azeige und Löschen von Titeln mit Sonderzeichen fehlerhaft
+		<broken>
+- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 2.0.4 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 1.0.3 DEINSTALLIEREN.
+		</broken>
+		<news>[B][COLOR orangered]Version 1.04 (03.02.2020)[/COLOR][/B] by realvito[CR]
+- Dieses Addon bekommt einen neuen Pfad im KODI-Verzeichnis ![CR]- Damit wird die Kompatibilität und der Aufruf durch andere Addons wiederhergestellt.[CR][CR]- Bitte das neue Addon mit der Version-No. 2.0.4 AKTIVIEREN.[CR]- Danach dieses Addon mit der Version-No. 1.0.3 DEINSTALLIEREN.
 		</news>
 	</extension>
 </addon>
