@@ -11,3 +11,7 @@
 
 [B]Version 1.0.2  (20.10.2019)[/B] by realvito
 - fixed: Azeige und Löschen von Titeln mit Sonderzeichen fehlerhaft
+
+[B]Version 1.0.3  (03.02.2020)[/B] by realvito
+- last OLDVERSION with Path = service.L0RE.cron
+- Please use the New Version (2.0.4) with Path = service.cron.autobiblio
